--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# model
+packages/model/sentiment_classification/results/KoBERT_128_CrossEntropyLoss/
+
+#.env
+.env
+.env.dev
+
+.DS_Store
